# SQLi-Automation-Tool

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ___init___.py  config.py  debug_dvwa.py  docker_compose.yml  file.gitignore  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_boolean_fixed.py  time_blind_sqli.py
sqli_tool/core/: requester.py  utils.py
sqli_tool/modules/: basic_scanner.py  boolean_blind.py
tests/: __init__.py  test_utils.py
workspace/: lint.yml
