# ══════════════════════════════════════════
#  Modern Python project configuration (PEP 621)
# ══════════════════════════════════════════

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqli-automation-tool"
version = "1.0.0"
description = "Advanced SQL Injection automation tool for authorized penetration testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "cyberwhiteelephant"},
]
keywords = ["sql-injection", "penetration-testing", "security", "sqli", "blind-sqli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "urllib3>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/cyberwhiteelephant/sqli-automation-tool"
Repository = "https://github.com/cyberwhiteelephant/sqli-automation-tool"
Issues = "https://github.com/cyberwhiteelephant/sqli-automation-tool/issues"

[project.scripts]
sqli-tool = "main:main"

[tool.setuptools.packages.find]
include = ["sqli_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]